--- a/.github/workflows/codeql-analysis.yml.tmpl
+++ b/.github/workflows/codeql-analysis.yml.tmpl
@@ -36,7 +36,7 @@ jobs:
     - name: Autobuild
       uses: github/codeql-action/autobuild@v1
 
-    # ℹ️ Command-line programs to run using the OS shell.
+    # Command-line programs to run using the OS shell.
     # https://git.io/JvXDl
 
     # If the Autobuild fails above, remove it and uncomment the following three lines
