Add a bunch of stuff

--- a/README.md.jinja
+++ b/README.md.jinja
@@ -1,4 +1,4 @@
-{{ name }}
+# {{ project_name }}
 
 copier-6.0.0a7-py3-none-any.whl was "patched" by modifying a line in "copier-6.0.0a7-py3-none-any.whl\copier-6.0.0a7.dist-info\METADATA" to read as below. This sidesteps an issue with building one of Copier's dependencies on Windows.
 
