--- a/template/package.json.jinja
+++ b/template/package.json.jinja
@@ -1,7 +1,7 @@
 {
   "repository": {
     "type": "git",
-    "url": "https://github.com/blakeNaccarato/wikiman.git"
+    "url": "https://github.com/blakeNaccarato/{{ project_name }}.git"
   },
   "license": "MIT",
   "devDependencies": {
