Update Copier to install from own patched fork

--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -5,7 +5,7 @@ The tooling for this repo is managed in a Copier template, separately from this 
 ```Shell
 py -m pip install pipx
 py -m pipx ensurepath
-py -m pipx install copier-6.0.0a7-py3-none-any.whl
+py -m pipx install git+https://github.com/blakeNaccarato/copier.git@v6.0.0a7patch
 ```
 
 ## Note
