--- a/template/package.json.jinja
+++ b/template/package.json.jinja
@@ -1,8 +1,5 @@
 {
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/{{ github_user }}/{{ github_repo }}.git"
-  },
+  "repository": "github:{{ project_owner_github_username }}/{{ github_repo_name }}",
   "license": "MIT",
   "devDependencies": {
     "pyright": "~1.1"
