Let's gitignore all CI/CD and linter stuff. We will use `copier` in our CI/CD to avoid repo clutter

--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -1,5 +1,16 @@
 # Template defaults
-.vscode
+.vscode/
+.coveragerc
+.flake8
+package.json
+pyrightconfig.json
+pytest.ini
+requirements_dev.txt
+requirements_lint.txt
+update.ps1
+
+# * -------------------------------------------------------------------------------- * #
+# * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
 
 # NPM/Node.JS because of Pyright CI/CD dependency
 node_modules/
