Make RHS of assert statement a string

--- a/template/tests/test_{{ project_name }}.py.jinja
+++ b/template/tests/test_{{ project_name }}.py.jinja
@@ -18,4 +18,4 @@ def test_example():
     that checks whether your import is the same as the name you supplied to Copier.
     """
 
-    assert {{ project_name }}.__name__ == {{ project_name }}
+    assert {{ project_name }}.__name__ == "{{ project_name }}"
