--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -5,8 +5,9 @@
 package.json
 pyrightconfig.json
 pytest.ini
+requirements_both.txt
 requirements_dev.txt
-requirements_lint.txt
+requirements_cicd.txt
 update.ps1
 
 # * -------------------------------------------------------------------------------- * #
