--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -1,14 +1,18 @@
-# Template defaults
+# Tooling configuration
 .vscode/
 .coveragerc
 .flake8
-package.json
 pyrightconfig.json
 pytest.ini
+setup.ps1
+
+{% if not gitignore_dependencies %}
+# Dependencies to be maintained in one place
+package.json
 requirements_both.txt
 requirements_cicd.txt
 requirements_dev.txt
-setup.ps1
+{% endif %}
 
 # * -------------------------------------------------------------------------------- * #
 # * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
