--- a/template/.github/dependabot.yml.jinja
+++ b/template/.github/dependabot.yml.jinja
@@ -7,3 +7,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+  {% if not gitignore_dependencies %}- package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"{% endif %}
