--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -5,13 +5,13 @@
 pyrightconfig.json
 pytest.ini
 setup.ps1
-
-{% if gitignore_dependencies %}# Dependencies to be maintained in one place
+{% if gitignore_dependencies %}
+# Dependencies to be maintained in one place
 package.json
 requirements_both.txt
 requirements_cicd.txt
-requirements_dev.txt{% endif %}
-
+requirements_dev.txt
+{% endif %}
 # * -------------------------------------------------------------------------------- * #
 # * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
 
