Reduce dep-checking when `gitignore_dependencies` We are now checking the `pip` package ecosystem in `copier-python`. We don't want to check it redundantly in `tooling` as well.

--- a/template/.github/dependabot.yml.jinja
+++ b/template/.github/dependabot.yml.jinja
@@ -3,10 +3,10 @@
 
 version: 2
 updates:
-  - package-ecosystem: "pip"
+  {% if gitignore_dependencies %}- package-ecosystem: "pip"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "daily"{% endif %}
   {% if not gitignore_dependencies %}- package-ecosystem: "github-actions"
     directory: "/"
     schedule:
