Add wheel pre-setup requirement

--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -2,5 +2,6 @@ copier {{ _src_path }} . -r {{ _commit }}
 py -3.9 -m venv .venv
 .venv/Scripts/activate
 pip install -U pip  # throws [WinError 5], but still works on its own
+pip install wheel
 pip install -r requirements_dev.txt  # packages for development
 flit install -s
