Install `copier` in separate environment. Ensures no dependency conflict between `copier` and actual project/tooling dependencies. Also trends more similar to local behavior in `setup.ps1`.

--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -18,7 +18,8 @@ jobs:
       - run: |
           pip install -U pip
           pip install wheel
-          pip install --pre copier
+          pip install pipx
+          pipx install copier==6.0.0a7
           copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
           pip install -r requirements_cicd.txt
           flit install
@@ -34,7 +35,8 @@ jobs:
       - run: |
           pip install -U pip
           pip install wheel
-          pip install --pre copier
+          pip install pipx
+          pipx install copier==6.0.0a7
           copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
           pip install -r requirements_cicd.txt
           flit install
@@ -54,7 +56,8 @@ jobs:
       - run: |
           pip install -U pip
           pip install wheel
-          pip install --pre copier
+          pip install pipx
+          pipx install copier==6.0.0a7
           copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
           pip install -r requirements_cicd.txt
           flit install
