--- a/template/setup.ps1.jinja
+++ b/template/setup.ps1.jinja
@@ -1,7 +1,7 @@
-copier {{ _src_path }} . -r {{ _commit }}
+copier -r {{ _commit }}
 py -{{ python_version }} -m venv .venv
 .venv/Scripts/activate
 pip install -U pip  # throws [WinError 5], but still works on its own
 pip install wheel
-pip install -r requirements_dev.txt  # packages for development
+pip install -r requirements_dev.txt
 flit install -s
