--- a/template/setup_cicd.sh.jinja
+++ b/template/setup_cicd.sh.jinja
@@ -1,6 +1,6 @@
 pip install -U pip wheel
 pip install pipx
-pipx install copier=={{ _min_copier_version }}
-copier gh:blakeNaccarato/copier-python . -f -r {{ _commit }}
+pipx install copier==6.0.0a7
+copier -f -r {{ _commit }}
 pip install -r requirements_cicd.txt
 flit install
