--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -6,9 +6,9 @@
 package.json
 pyrightconfig.json
 pytest.ini
-requirements_both.txt
-requirements_cicd.txt
-requirements_dev.txt
+tooling/requirements_both.txt
+tooling/requirements_cicd.txt
+tooling/requirements_dev.txt
 
 # * -------------------------------------------------------------------------------- * #
 # * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
