Try with paths relative to their containing scripts

--- a/template/tooling/setup.ps1.jinja
+++ b/template/tooling/setup.ps1.jinja
@@ -3,5 +3,5 @@ py -{{ python_version }} -m venv .venv
 .venv/Scripts/activate
 pip install -U pip  # throws [WinError 5], but still works on its own
 pip install wheel
-pip install -r tooling/requirements_dev.txt
+pip install -r requirements_dev.txt
 flit install -s
