--- a/template/tooling/setup_cicd.sh.jinja
+++ b/template/tooling/setup_cicd.sh.jinja
@@ -1,9 +1,7 @@
-ls -a
 git reset --hard
-ls -a
 pip install -U pip wheel
 pip install pipx
 pipx install copier==6.0.0a7
 copier -f -r {{ _commit }}
-pip install -r requirements_cicd.txt
+pip install -r tooling/requirements_cicd.txt
 flit install
