--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -1,5 +1,3 @@
-# See https://flit.readthedocs.io/en/latest/pyproject_toml.html for more fields.
-
 [build-system]
 requires = ["flit_core >=3.3,<4"]
 build-backend = "flit_core.buildapi"
@@ -8,13 +6,13 @@ build-backend = "flit_core.buildapi"
 name = "{{ project_name }}"
 requires-python = ">={{ python_version }}"
 dependencies = []
-
 readme = "README.md"
-authors = [{ name = "{{ project_owner_name }}", email = "{{ project_email }}" }]
 dynamic = ["version", "description"]
+[[project.authors]]
+name = "{{ project_owner_name }}"
+email = "{{ project_email }}"
 
 [project.urls]
 Home = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}"
 
-# Workaround for flit 3.3.0 https://github.com/takluyver/flit/issues/432
 [project.optional-dependencies]
