--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -6,6 +6,7 @@
 package.json
 pyrightconfig.json
 pytest.ini
+tooling/bump_pyproject.py
 tooling/requirements_both.txt
 tooling/requirements_cicd.txt
 tooling/requirements_dev.txt
