--- a/template/.github/workflows/bump.yml.jinja
+++ b/template/.github/workflows/bump.yml.jinja
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: {{ python_version }}
       - run: bash tooling/cicd_setup.sh
       - run: python tooling/bump_pyproject.py
       - uses: stefanzweifel/git-auto-commit-action@v4.12.0
