--- a/template/.github/workflows/main.yml.jinja
+++ b/template/.github/workflows/main.yml.jinja
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: {{ python_version }}
       - run: bash tooling/cicd_setup.sh
       - run: flake8
 
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: {{ python_version }}
       - run: bash tooling/cicd_setup.sh
       - uses: actions/setup-node@v2.4.0
         with:
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: {{ python_version }}
       - run: bash tooling/cicd_setup.sh
       - run: pytest --cov
       - uses: codecov/codecov-action@v2.1.0
