--- a/template/.github/workflows/publish.yml.jinja
+++ b/template/.github/workflows/publish.yml.jinja
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-python@v2.2.2
         with:
-          python-version: 3.9
+          python-version: {{ python_version }}
       - run: bash tooling/cicd_setup.sh
       - name: publish
         env:
