--- a/template/.github/workflows/bump.yml.jinja
+++ b/template/.github/workflows/bump.yml.jinja
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
-    paths: ["tooling/requirements_pyproject.txt"]
+    paths: ["requirements.txt"]
 
 jobs:
   bump:
