--- a/template/.github/workflows/publish.yml.jinja
+++ b/template/.github/workflows/publish.yml.jinja
@@ -16,5 +16,5 @@ jobs:
       - name: publish
         env:
           FLIT_USERNAME: __token__
-          FLIT_PASSWORD: {{ ${{ }} secrets.PYPI_TOKEN }}
+          FLIT_PASSWORD: {% raw %}${{ secrets.PYPI_TOKEN }}{% endraw %}
         run: flit publish
