Implement python profile Fixes #43

--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -1,9 +1,10 @@
 # Tooling
-*.rej
-.vscode/
 .coveragerc
+.env
 .flake8
 .gitattributes
+.vscode/
+*.rej
 package.json
 pyrightconfig.json
 pytest.ini
