Gitignore `pythonrc.py`

--- a/template/.gitignore.jinja
+++ b/template/.gitignore.jinja
@@ -9,6 +9,7 @@ package.json
 pyrightconfig.json
 pytest.ini
 tooling/bump_pyproject.py
+tooling/pythonrc.py
 tooling/requirements_both.txt
 tooling/requirements_cicd.txt
 tooling/requirements_dev.txt
