Make copier give default answers and overwrite This setup script is meant to enforce a reproducible repo and virtual environment. Since it isn't meant to be interacted with, we should make this step automatic.

--- a/template/tooling/setup.ps1.jinja
+++ b/template/tooling/setup.ps1.jinja
@@ -1,4 +1,4 @@
-copier -r {{ _commit }}
+copier -rf {{ _commit }}
 py -{{ python_version }} -m venv .venv
 .venv/Scripts/activate
 pip install -U pip  # throws [WinError 5], but still works on its own
