--- a/template/tooling/update.ps1.jinja
+++ b/template/tooling/update.ps1.jinja
@@ -1,7 +1,6 @@
 copier -rf {{ _commit }}
-py -{{ python_version }} -m venv --clear --upgrade .venv
 .venv/Scripts/activate
-pip install -U pip  # throws [WinError 5], but works
+pip install -U pip  # throws [WinError 5], but still works on its own
 pip install -U setuptools wheel  # must be done separately from above
 pip install -r tooling/requirements_dev.txt
 flit install -s
