Revert. Looks like flags are handled differently by platform.

--- a/template/tooling/cicd_setup.sh.jinja
+++ b/template/tooling/cicd_setup.sh.jinja
@@ -1,6 +1,6 @@
 pip install -U pip wheel
 pip install pipx
 pipx install copier==6.0.0a9
-copier -rf {{ _commit }}
+copier -f -r {{ _commit }}
 pip install -r tooling/requirements_cicd.txt
 flit install
