--- a/template/tooling/update.ps1.jinja
+++ b/template/tooling/update.ps1.jinja
@@ -1,4 +1,4 @@
-copier -rf {{ _commit }}
+copier -f -r {{ _commit }}
 .venv/Scripts/activate
 pip install -U pip  # throws [WinError 5], but still works on its own
 pip install -U setuptools wheel  # must be done separately from above
