--- a/template/tooling/cicd_setup.sh.jinja
+++ b/template/tooling/cicd_setup.sh.jinja
@@ -1,6 +1,5 @@
-pip install -U pip wheel
-pip install pipx
-pipx install copier==6.0.0a9
+pip install -U pip setuptools wheel
+pip install git+https://github.com/copier-org/copier@master  # copier==6.0.0a9
 copier -f -r {{ _commit }}
 pip install -r tooling/requirements_cicd.txt
 flit install
