--- a/template/tooling/scripts/gitignore_to_merge.jinja
+++ b/template/tooling/scripts/gitignore_to_merge.jinja
@@ -1,14 +1,15 @@
-{% if not override_coveragerc  %}.coveragerc{% endif %}
-.env
-.flake8
-.gitattributes
+{% if not override_coveragerc %}.coveragerc{% endif %}
+{% if not override_env %}.env{% endif %}
+{% if not override_flake8 %}.flake8{% endif %}
+{% if not override_gitattributes %}.gitattributes{% endif %}
+{% if not override_pyrightconfig %}pyrightconfig.json{% endif %}
+{% if not override_pytest  %}pytest.ini{% endif %}
 .vscode/
 *.rej
 package.json
-pyrightconfig.json
-{% if not override_pytest  %}pytest.ini{% endif %}
-tooling/bump_pyproject.py
 tooling/pythonrc.py
 tooling/requirements_both.txt
 tooling/requirements_cicd.txt
 tooling/requirements_dev.txt
+tooling/scripts/bump_pyproject.py
+tooling/scripts/merge_gitignore.py
