We will just have to deal with blank lines in the gitignore

--- a/template/tooling/scripts/gitignore_to_merge.jinja
+++ b/template/tooling/scripts/gitignore_to_merge.jinja
@@ -1,6 +1,6 @@
-{% if not override_coveragerc %}.coveragerc{% endif -%}
-{% if not override_env %}.env{% endif -%}
-{% if not override_flake8 %}.flake8{% endif -%}
-{% if not override_gitattributes %}.gitattributes{% endif -%}
-{% if not override_pyrightconfig %}pyrightconfig.json{% endif -%}
-{% if not override_pytest %}pytest.ini{% endif -%}
+{% if not override_coveragerc %}.coveragerc{% endif %}
+{% if not override_env %}.env{% endif %}
+{% if not override_flake8 %}.flake8{% endif %}
+{% if not override_gitattributes %}.gitattributes{% endif %}
+{% if not override_pyrightconfig %}pyrightconfig.json{% endif %}
+{% if not override_pytest %}pytest.ini{% endif %}
