--- a/template/tooling/scripts/gitignore_to_merge.jinja
+++ b/template/tooling/scripts/gitignore_to_merge.jinja
@@ -2,7 +2,7 @@
 .vscode/*
 *.rej
 package.json
-tooling_
+.nest_*
 {% if not override_coveragerc %}.coveragerc{% endif %}
 {% if not override_env %}.env{% endif %}
 {% if not override_flake8 %}.flake8{% endif %}
