Don't accidentally delete things when deleting the nest

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -141,7 +141,7 @@
   //* Experimental File Nesting
   "explorer.experimental.fileNesting.enabled": true,
   "explorer.experimental.fileNesting.expand": false,
-  "explorer.experimental.fileNesting.operateAsGroup": true,
+  "explorer.experimental.fileNesting.operateAsGroup": false,
   "explorer.experimental.fileNesting.patterns": {
     "*.ts": "${capture}.js",
     "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
