--- a/template/{% if not override_pyrightconfig %}pyrightconfig.json{% endif %}.jinja
+++ b/template/{% if not override_pyrightconfig %}pyrightconfig.json{% endif %}.jinja
@@ -1,5 +1,5 @@
 {
-  "ignore": ["tooling"],
+  "ignore": [".tooling"],
   "include": ["src", "examples"],
   "reportMissingParameterType": "none",
   "reportMissingTypeStubs": "none",
