Put nests before files

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -139,6 +139,7 @@
   "editor.formatOnSave": true,
 
   //* Experimental File Nesting
+  "explorer.sortOrder": "foldersNestsFiles",
   "explorer.experimental.fileNesting.enabled": true,
   "explorer.experimental.fileNesting.expand": false,
   "explorer.experimental.fileNesting.operateAsGroup": false,
