Be more explicit about flake8

--- a/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_settings %}settings.json{% endif %}.jinja
@@ -14,6 +14,7 @@
   //! Linting
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
+  "python.linting.flake8Args": ["--config", ".flake8"],
   "python.sortImports.args": ["--profile", "black"],
 
   //! Extension: GitHub Actions
