--- a/template/{% if not override_flake8 %}.flake8{% endif %}.jinja
+++ b/template/{% if not override_flake8 %}.flake8{% endif %}.jinja
@@ -44,3 +44,19 @@ ignore =
     F821,
     ; flake8: Assigned to but never used, Pylance(reportUnusedVariable)
     F841,
+
+per-file-ignores =
+
+    tests/*:
+        ; We indicate custom fixtures w/ ALL_CAPS to distinguish from other args
+        ; function name should be lowercase
+        N802,
+        ; argument name should be lowercase
+        N803,
+
+        ; Ignore assert from bandit. Not a security issue in tests
+        S101,
+
+    __init__.py:
+        ; 'from module import *' used
+        F403,
