--- a/template/.vscode/.gitignore.jinja
+++ b/template/.vscode/.gitignore.jinja
@@ -1,3 +1,4 @@
+# Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
 {% if override_vscode_extensions %}!extensions.json{% endif %}
 {% if override_vscode_settings %}!settings.json{% endif %}
 {% if override_vscode_launch %}!launch.json{% endif %}
