Speed up Get-ChildItem by using -Filter

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -35,7 +35,7 @@
       "command": "pwsh",
       "args": [
         "-Command",
-        "Get-ChildItem * -Include *.rej -Recurse | Remove-Item"
+        "Get-ChildItem -Recurse -Filter *.rej | Remove-Item"
       ],
       "problemMatcher": []
     }
