Add update task

--- a/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
+++ b/template/.vscode/{% if not override_vscode_tasks %}tasks.json{% endif %}.jinja
@@ -30,6 +30,13 @@
       "problemMatcher": []
     },
     {
+      "label": "pwsh: Update project",
+      "type": "process",
+      "command": "pwsh",
+      "args": [".tooling/update.ps1"],
+      "problemMatcher": []
+    },
+    {
       "label": "pwsh: Remove *.rej",
       "type": "process",
       "command": "pwsh",
