--- a/template/.tooling/.gitignore.jinja
+++ b/template/.tooling/.gitignore.jinja
@@ -1,6 +1,4 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
 pythonrc.py
-requirements_both.txt
-requirements_cicd.txt
-requirements_dev.txt
+requirements
 scripts
