Move pythonrc.py to root of template

--- a/template/.tooling/scripts/gitignore_to_merge.jinja
+++ b/template/.tooling/scripts/gitignore_to_merge.jinja
@@ -2,6 +2,7 @@
 .vscode/*
 *.rej
 package.json
+pythonrc.py
 .nest_*
 {% if not override_coveragerc %}.coveragerc{% endif %}
 {% if not override_env %}.env{% endif %}
