--- a/template/.tooling/scripts/gitignore_to_merge.jinja
+++ b/template/.tooling/scripts/gitignore_to_merge.jinja
@@ -1,10 +1,10 @@
-# need "*" to allow negations in .vscode/.gitignore
+# Need "*" to allow negations in .vscode/.gitignore
 .vscode/*
-# to avoid committing rejected changes upon bumping template
+# To avoid committing rejected changes upon bumping template
 *.rej
-package.json
+# Only needed in dev environments
 pythonrc.py
 .nest_*
-# don't commit convenience scripts in root, but still commit those in subfolder
+# Don't commit convenience scripts in root, but still commit those in subfolder
 /setup.ps1
 /update.ps1
