Template the CHANGELOG so that its initial links and tags work as intended Fixes #103

--- a/template/CHANGELOG.md.jinja
+++ b/template/CHANGELOG.md.jinja
@@ -7,4 +7,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
-- Nothing yet.
+- Nothing yet
+
+## [0.0.0]
+
+- No features yet
+
+[Unreleased]: https://github.com/blakeNaccarato/{{ project_name }}/compare/0.0.0...HEAD
+[0.0.0]: https://github.com/blakeNaccarato/{{ project_name }}/releases/tag/0.0.0
